# haskell

./: stack.yaml
tensorflow-deptyped/: LICENSE  tensorflow-deptyped.cabal
tensorflow-deptyped/executable/: Main.hs
tensorflow-deptyped/src/TensorFlow/: DepTyped.hs
tensorflow-deptyped/src/TensorFlow/DepTyped/: Base.hs  Minimize.hs  Ops.hs  Output.hs  Session.hs  Tensor.hs  Types.hs  Variable.hs
tensorflow-mnist-deptyped/: LICENSE  tensorflow-mnist-deptyped.cabal
tensorflow-mnist-deptyped/app/: Main.hs
tensorflow-mnist-deptyped/src-data/TensorFlow/Examples/MNIST/: TrainedGraph.hs
tensorflow-mnist-deptyped/src/TensorFlow/Examples/MNISTDeptyped/: Parse.hs
