name:           tensorflow-deptyped
version:        0.0.1
synopsis:       Reexporting TensorFlow Haskell with dependent typed functions
description:    Securing tensorflow code using dependent types.
category:       Machine Learning
homepage:       https://github.com/tensorflow/haskell
bug-reports:    https://github.com/tensorflow/haskell
maintainer:     Elkin Cruz
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    LICENSE

source-repository head
  type: git
  location: https://github.com/tensorflow/haskell

library
  hs-source-dirs:
      src
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  build-depends:
      base >= 4.9 && < 5
    , tensorflow
    , tensorflow-ops
    , singletons
    , vector
    , vector-sized
    , bytestring
  exposed-modules:
      TensorFlow.DepTyped
    , TensorFlow.DepTyped.Base
    , TensorFlow.DepTyped.Tensor
    , TensorFlow.DepTyped.Types
    , TensorFlow.DepTyped.Session
    , TensorFlow.DepTyped.Ops
    , TensorFlow.DepTyped.Output
    , TensorFlow.DepTyped.Variable
    , TensorFlow.DepTyped.Minimize
  default-language: Haskell2010

executable tensorflow-haskell-deptyped
  main-is: Main.hs
  hs-source-dirs:
      executable
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base >= 4.9 && < 5
    , tensorflow-deptyped
    , bytestring
    , vector
    , vector-sized
    , singletons
    , tensorflow
    , tensorflow-ops
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
